--- a/app/src/main/res/layout/activity_user_followers.xml
+++ b/app/src/main/res/layout/activity_user_followers.xml
@@ -67,8 +67,8 @@
 
     <ListView
         android:id="@+id/followersList"
-        android:layout_width="0dp"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1" />
 
 </LinearLayout>
