--- a/app/src/main/res/layout/follower.xml
+++ b/app/src/main/res/layout/follower.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:weightSum="1">
 
     <ImageView
         android:id="@+id/userImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp" />
+        android:layout_width="80dp"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+
+        android:src="@drawable/default_user" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -21,7 +24,7 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:text="name"
-            android:textColor="#ffffff" />
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/handle"
@@ -30,7 +33,7 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:text="handle"
-            android:textColor="#ffffff" />
+            android:textColor="@color/gray" />
 
         <TextView
             android:id="@+id/bio"
@@ -39,7 +42,7 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:text="bio"
-            android:textColor="#ffffff" />
+            android:textColor="@color/gray" />
 
 
     </LinearLayout>
