--- a/app/src/main/res/layout/follower.xml
+++ b/app/src/main/res/layout/follower.xml
@@ -9,7 +9,7 @@
         android:layout_width="80dp"
         android:layout_height="match_parent"
         android:layout_margin="5dp"
-
+        android:scaleType="fitCenter"
         android:src="@drawable/default_user" />
 
     <LinearLayout
